--- a/backend/api_foodgram/requirements.txt
+++ b/backend/api_foodgram/requirements.txt
@@ -1,5 +1,12 @@
 Django==2.2.16
+djangorestframework==3.13.1
+flake8==5.0.4
+mccabe==0.7.0
+Pillow==9.2.0
+pkg_resources==0.0.0
 psycopg2-binary==2.8.6
+pycodestyle==2.9.1
+pyflakes==2.5.0
 python-dotenv==0.20.0
 pytz==2022.2.1
 sqlparse==0.4.2
