--- a/backend/api_foodgram/requirements.txt
+++ b/backend/api_foodgram/requirements.txt
@@ -33,6 +33,7 @@ python3-openid==3.2.0
 pytz==2022.2.1
 requests==2.28.1
 requests-oauthlib==1.3.1
+reportlab==3.6.11
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
