--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     # server_name 127.0.0.1;
-    server_name localhost;
+    # server_name localhost;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -19,17 +19,12 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-    # location /api/ {
-    #     proxy_set_header        Host $host;
-    #     proxy_set_header        X-Real-IP $remote_addr;
-    #     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header        X-Forwarded-Proto $scheme;
-    # }
+
     location /api/ {
-        # proxy_set_header        Host $host;
-        # proxy_set_header        X-Forwarded-Host $host;
-        # proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/api/;
     }
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
