--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -12,9 +12,9 @@ server {
     }
 
     # location /api/ {
-    #     proxy_pass http://localhost:8000;
+    #     proxy_pass http://backend:8000;
     # }
     # location / {
-    #     proxy_pass http://localhost:8000;
+    #     proxy_pass http://localhost;
     # }
 }
