--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -33,9 +33,9 @@ server {
         # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         # proxy_set_header        X-Forwarded-Proto $scheme;
     }
-    location /static/ {
-        root /var/html/;
-    }
+    # location /static/ {
+    #     root /var/html/;
+    # }
     location /media/ {
         root /var/html/;
     }
