--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          file: api_foodgram/Dockerfile
+          file: backend/api_foodgram/Dockerfile
           push: true
           tags: abeloborodova/api_foodgram:latest
 
