--- a/backend/api_foodgram/Dockerfile
+++ b/backend/api_foodgram/Dockerfile
@@ -2,12 +2,8 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-# COPY ./api_foodgram/ .
-
-COPY requirements.txt /app
+COPY ./ .
 
 RUN pip3 install -r requirements.txt --no-cache-dir
-
-COPY ./ /app
 
 ENTRYPOINT ["bash", "docker-entrypoint.sh"]
