--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,13 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd ../api_foodgram/
+        cd backend/api_foodgram/
         pip install -r requirements.txt 
 
     - name: Test with flake8
       run: |
         python -m flake8
-        cd ../api_foodgram/
+        cd backend/api_foodgram/
 
 
   build_and_push_to_docker_hub:
@@ -43,7 +43,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          file: api_foodgram/Dockerfile
+          file: backend/api_foodgram/Dockerfile
           push: true
           tags: abeloborodova/api_foodgram:latest
 
