--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3.3'
 services:
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: abeloborodova/frontend_foodgram:latest
+    # build:
+    #   context: ../frontend
+    #   dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
   nginx:
