--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.3'
 services:
 
-  frontend:
-    image: abeloborodova/frontend_foodgram:latest
-    # build:
-    #   context: ../frontend
-    #   dockerfile: Dockerfile
-    volumes:
-      - ../frontend/:/app/result_build/
+  # frontend:
+  #   image: abeloborodova/frontend_foodgram:latest
+  #   # build:
+  #   #   context: ../frontend
+  #   #   dockerfile: Dockerfile
+  #   volumes:
+  #     - ../frontend/:/app/result_build/
   nginx:
     image: nginx:1.19.3
     ports:
