--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -27,15 +27,15 @@ server {
         proxy_pass http://backend:8000/api/;
     }
     location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000/admin/;
-        # proxy_set_header        Host $host;
-        # proxy_set_header        X-Real-IP $remote_addr;
-        # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header        X-Forwarded-Proto $scheme;
     }
-    # location /static/ {
-    #     root /var/html/;
-    # }
+    location /static/ {
+        root /var/html/;
+        # root /usr/share/nginx/html;
+    }
     location /media/ {
         root /var/html/;
     }
