--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,6 @@
 server {
     listen 80;
-    # server_name 127.0.0.1;
-    # server_name localhost;
+    server_name localhost;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -27,14 +26,16 @@ server {
         proxy_pass http://backend:8000/api/;
     }
     location /admin/ {
+        proxy_pass http://backend:8000/admin/;
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000/admin/;
     }
-    location /static/ {
+    location /static/admin/ {
         root /var/html/;
-        # root /usr/share/nginx/html;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
     }
     location /media/ {
         root /var/html/;
