Fixed comments without rename app

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -11,10 +11,8 @@ server {
         root /var/html/;
     }
 
-    # location /api/ {
-    #     proxy_pass http://backend:8000;
-    # }
-    # location / {
-    #     proxy_pass http://localhost;
-    # }
+    location /api/ {
+        proxy_pass http://backend:8000;
+    }
+
 }
