--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -26,7 +26,8 @@ services:
       - ./.env
 
   backend:
-    image: abeloborodova/foodgram:latest
+    # image: abeloborodova/foodgram:latest
+    build: ../api_foodgram
     restart: always
     volumes:
       - static_value:/app/static/
