--- a/backend/api_foodgram/Dockerfile
+++ b/backend/api_foodgram/Dockerfile
@@ -2,7 +2,9 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY backend/api_foodgram/ .
+# COPY backend/api_foodgram/ .
+COPY ./ .
+
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
