--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.3'
 services:
 
-  frontend:
-    image: abeloborodova/frontend_foodgram:latest
-    volumes:
-      - ../frontend/:/app/result_build/
+  # frontend:
+  #   image: abeloborodova/frontend_foodgram:latest
+  #   volumes:
+  #     - ../frontend/:/app/result_build/
   nginx:
     image: nginx:1.19.3
     ports:
@@ -27,7 +27,7 @@ services:
 
   backend:
     # image: abeloborodova/foodgram:latest
-    build: ../api_foodgram
+    build: ../backend/api_foodgram
     restart: always
     volumes:
       - static_value:/app/static/
