--- a/backend/foodgram/Dockerfile
+++ b/backend/foodgram/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
-COPY backend/api_foodgram/ .
+COPY backend/foodgram/ .
 
 
 RUN pip3 install -r requirements.txt --no-cache-dir
