--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
   backend:
     image: abeloborodova/foodgram:latest
-    # build: ../backend/api_foodgram
+    # build: ../backend/foodgram
     restart: always
     volumes:
       - static_value:/app/static/
