--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -17,12 +17,12 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd backend/api_foodgram/
+        cd backend/foodgram/
         pip install -r requirements.txt 
 
     - name: Test with flake8
       run: |
-        cd backend/api_foodgram/
+        cd backend/foodgram/
         python -m flake8
 
 
@@ -43,7 +43,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          file: backend/api_foodgram/Dockerfile
+          file: backend/foodgram/Dockerfile
           push: true
           tags: abeloborodova/foodgram:latest
 
