--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.3'
 services:
 
-  # frontend:
-  #   image: abeloborodova/frontend_foodgram:latest
-  #   volumes:
-  #     - ../frontend/:/app/result_build/
+  frontend:
+    image: abeloborodova/frontend_foodgram:latest
+    volumes:
+      - ../frontend/:/app/result_build/
   nginx:
     image: nginx:1.19.3
     ports:
@@ -27,7 +27,6 @@ services:
 
   backend:
     image: abeloborodova/foodgram:latest
-    # build: ../backend/foodgram
     restart: always
     volumes:
       - static_value:/app/static/
