--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -58,6 +58,7 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
+          sudo docker pull abeloborodova/foodgram
           sudo docker-compose stop
           sudo docker-compose rm backend
           touch .env
